Remove vertical-align from floating-label-form-group to resolve warnings

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -301,9 +301,11 @@ header.masthead h2 {
   margin: 0;
   -webkit-transition: top 0.3s ease, opacity 0.3s ease;
   transition: top 0.3s ease, opacity 0.3s ease;
+  opacity: 0;
+  /*
   vertical-align: middle;
   vertical-align: baseline;
-  opacity: 0;
+  */
 }
 
 .floating-label-form-group:not(:first-child) {
